<resources>
    <string name="app_name">Koprasi Super Apps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Label1">News and Promo</string>
    <string name="LabelViewAll">View All</string>
    <string name="agung_podomoro_land">Koprasi Super Apps</string>
    <string name="tgl">06 Nov 2020 - 15 Dec 2020</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="floor">Floor No.</string>
    <string name="unit">Unit No.</string>
    <string name="title_activity_base2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Account</string>
    <string name="title_notifications">Notifications</string>
    <string name="nama">Nama</string>
    <string name="titik2">:</string>
    <string name="m_dwiyan_hartono">M. Dwiyan Hartono</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log Out</string>
    <string name="user_id">User ID</string>
    <string name="userid">dwiyan</string>
    <string name="email">Email</string>
    <string name="emailsaya">m.dwiyan.hartono@gmail.com</string>
    <string name="save_image">Save Image</string>
    <string name="list_image">List Image</string>
    <string name="back">Back</string>
    <string name="keterangan">Description</string>
    <string name="photo">Photo</string>
    <string name="add_photo">Add Photo</string>
    <string name="imagephoto">image photo</string>
    <string name="provider">Provider</string>
    <string name="virtual_account">Virtual Account</string>
    <string name="labelMenu">Menu</string>
    <string name="contact_infromation">Contact Infromation</string>
    <string name="name">Name</string>
    <string name="required">*</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="marital_status">Marital Status :</string>
    <string name="signle">Signle</string>
    <string name="married">Married</string>
    <string name="other">Other</string>
    <string name="e_ktp_number">e-KTP Number</string>
    <string name="_3xxxxxx">3xxxxxx</string>
    <string name="e_mail">E-mail</string>
    <string name="myname_example_com">myname@example.com</string>
    <string name="phone">Phone</string>
    <string name="_000_000_0000">(000) 000-0000</string>
    <string name="address">Address</string>
    <string name="street_address">Street Address</string>
    <string name="street_address_line_2">Street address Line 2</string>
    <string name="city">City</string>
    <string name="state_province">State / Province</string>
    <string name="postal_zip_code">Postal / Zip Code</string>
    <string name="how_long_have_you_lived_in_your_given_address">How long have you lived in your given address ?</string>
    <string name="_0_1_year">0-1 Year</string>
    <string name="_1_2_years">1-2 Years</string>
    <string name="_2_3_years">2-3 Years</string>
    <string name="_3_4_years">3-4 Years</string>
    <string name="_5_years">5+ Years</string>
    <string name="employment_infromation">Employment Infromation</string>
    <string name="present_employer">Present Employer</string>
    <string name="occupation">Occupation</string>
    <string name="years_of_experience">Years of experience</string>

    <string name="gross_monthly_income">Gross monthly income</string>

    <string name="monthly_rent_mortgage">Monthly rent/mortgage</string>
    <string name="ex_0_for_no_rent_mortgage">ex: 0 for no rent/mortgage</string>
    <string name="down_payment_amount">Down Payment Amount</string>
    <string name="_15000">15000</string>
    <string name="comments">Comments</string>
    <string name="interested_in_loan_products">Interested In Loan Products:</string>
    <string name="i_authorize_prospective_credit_grantors_lending_leasing_companies_to_obtain_personal_and_credit_information_about_me_from_my_employer_and_credit_bureau_or_credit_reporting_agency_any_person_who_has_or_may_have_any_financial_dealing_with_me_or_from_any_references_i_have_provided_this_information_as_well_as_that_provided_by_me_in_the_application_will_be_referred_to_in_connection_with_this_lease_and_any_other_relationships_we_may_establish_from_time_to_time_any_personal_and_credit_information_obtained_may_be_disclosed_from_time_to_time_to_other_lenders_credit_bureaus_or_other_credit_reporting_agencies">I authorize prospective Credit Grantors/Lending/Leasing Companies to obtain personal and credit information about me from my employer and credit bureau, or credit reporting agency, any person who has or may have any financial dealing with me, or from any references I have provided. This information, as well as that provided by me in the application, will be referred to in connection with this lease and any other relationships we may establish from time to time. Any personal and credit information obtained may be disclosed from time to time to other lenders, credit bureaus or other credit reporting agencies. *</string>

    <string name="i_hereby_agree_that_the_information_given_is_true_accurate_and_complete_as_of_the_date_of_this_application_submission">I hereby agree that the information given is true, accurate and complete as of the date of this application submission. *</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="take_your_picture">Take Your Picture</string>
    <string name="image">image</string>
    <string name="send_application_now">Send e-Form</string>
    <string name="double_click">Format Date</string>
    <string name="title">Title</string>
    <string name="hasil">Hasil</string>
</resources>