<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dwiyanhartono.com.loankoprasi.Home"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="dwiyanhartono.com.loankoprasi.Account"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="dwiyanhartono.com.loankoprasi.Notif"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notif" />
</navigation>