<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:background="@drawable/rounded_background_strokred"
        android:padding="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_label_desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/botlay"
                app:layout_constraintTop_toBottomOf="@+id/lybutton1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/lybutton1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_background_strokred"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo"
                        android:textColor="@color/black"
                        android:textSize="32sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/btn_choose_image"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableEnd="@drawable/addphoto"
                        android:text="@string/add_photo"
                        android:textAllCaps="false"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_margin="@dimen/margin"
                        android:contentDescription="@string/imagephoto"
                        android:onClick="addphoto"
                        android:src="@drawable/addphoto"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:layout_marginTop="10dp"
                    android:id="@+id/image_view"
                    android:layout_width="match_parent"
                    android:layout_height="392dp"
                    android:contentDescription="@string/imagephoto"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lybutton1" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <TextView
            android:id="@+id/txt_label_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keterangan"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_normal"
            app:layout_constraintBottom_toTopOf="@+id/keterangan"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/keterangan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:hint="@string/keterangan"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/font_size_normal"
            app:layout_constraintBottom_toTopOf="@+id/botlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/botlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Button
                android:layout_margin="10dp"
                android:id="@+id/btn_save_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/save"
                android:text="@string/save_image"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/btn_listimage"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_margin="10dp"
                android:id="@+id/btn_listimage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/gallery"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:text="@string/list_image"
                android:textAllCaps="false"
                app:layout_constraintEnd_toStartOf="@+id/btn_showimage"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_save_image"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_margin="10dp"
                android:id="@+id/btn_showimage"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:drawableTop="@drawable/batal"
                android:text="@string/back"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_listimage"
                tools:ignore="ButtonStyle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>